// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title Renders \`title\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Custom title"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            name="title"
            placeholder="Widget title"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`title Renders \`title\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Title"
>
  <div
    class="v-input theme--light v-text-field v-text-field--placeholder"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            name="title"
            placeholder="Widget title"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
